tests/ui/trait-bounds/duplicate-relaxed-bounds.stderr
error: this relaxed bound is not permitted here
  --> $DIR/duplicate-relaxed-bounds.rs:18:21
   |
LL |         Self::Type: ?Sized;
   |                     ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:1:13
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |             ^^^^^^   ^^^^^^

error[E0203]: duplicate relaxed `Iterator` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:1:31
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |                               ^^^^^^^^^   ^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/duplicate-relaxed-bounds.rs:1:31
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |                               ^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/duplicate-relaxed-bounds.rs:1:43
   |
LL | fn dupes<T: ?Sized + ?Sized + ?Iterator + ?Iterator>() {}
   |                                           ^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/duplicate-relaxed-bounds.rs:26:26
   |
LL | fn not_dupes<T: ?Sized + ?Iterator>() {}
   |                          ^^^^^^^^^

error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:30:19
   |
LL | fn where_dupes<T: ?Sized>()
   |                   ^^^^^^
...
LL |     T: ?Sized,
   |        ^^^^^^

error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:10:16
   |
LL |     type Type: ?Sized + ?Sized;
   |                ^^^^^^   ^^^^^^

error[E0203]: duplicate relaxed `Sized` bounds
  --> $DIR/duplicate-relaxed-bounds.rs:10:16
   |
LL |     type Type: ?Sized + ?Sized;
   |                ^^^^^^   ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0203`.
